[gd_scene load_steps=2 format=3 uid="uid://ou38rmu0i5gp"]

[ext_resource type="Script" path="res://scripts/inventory/slot.gd" id="1_b4yiv"]

[node name="Slot" type="PanelContainer"]
custom_minimum_size = Vector2(64, 64)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_b4yiv")

[node name="Texture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
